<resources>
    <string name="app_name">MeetBuddy</string>
    <string name="tv_login_heading">Log In</string>
    <string name="etv_mobile_no_label">Mobile No : </string>
    <string name="etv_mobile_no_hint">Enter mobile no </string>
    <string name="btn_log_in">Login</string>
    <string name="tv_network_heading_">Network connection</string>
    <string name="tv_network_desc">Please check your network connection</string>
    <string name="tv_opt_label">OTP :</string>
    <string name="etv_otp_hint">Enter 6 digit OTP..</string>
    <string name="tv_choose">Choose Calling Mode</string>
    <string name="btn_voice">Voice</string>
    <string name="btn_video">Video</string>
    <string name="btn_join">Join</string>
    <string name="btn_leave">Leave</string>
    <string name="tv_video_call">Video Call</string>
    <string name="txt_audio_heading">Press the button to join a channel</string>
    <string name="btn_view_logs">View Logs</string>
    <string name="tv_call_duration_label">Duration : </string>
    <string name="tv_time_stamp_label">Time Stamp :</string>
    <string name="tv_remoted_user_id_label">Remote User Id : </string>
    <string name="tv_video_call_log_heading">Video Call Logs</string>
</resources>