<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/video_main_v"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.VideoCallActivity">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:paddingHorizontal="16dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text="@string/tv_video_call"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/local_video_view_container"
                android:layout_width="320dp"
                android:layout_height="240dp"
                android:layout_margin="6dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_heading" />

            <FrameLayout
                android:id="@+id/remote_video_view_container"
                android:layout_width="320dp"
                android:layout_height="240dp"
                android:layout_below="@+id/local_video_view_container"
                android:layout_margin="6dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/local_video_view_container" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_button"
                android:onClick="joinChannel"
                android:text="@string/btn_join"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/remote_video_view_container"
                app:layout_constraintTop_toBottomOf="@id/remote_video_view_container" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_leave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_button"
                android:onClick="leaveChannel"
                android:text="@string/btn_leave"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/remote_video_view_container"
                app:layout_constraintTop_toBottomOf="@id/remote_video_view_container" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_call_logs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button"
                android:onClick="leaveChannel"
                android:text="@string/btn_view_logs"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_leave"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>