<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_button"
            android:padding="6dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_duration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/tv_call_duration_label"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_remote_user_id_label"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_remote_user_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/tv_remoted_user_id_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_duration_label"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_remote_user_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_remote_user_id_label"
                app:layout_constraintTop_toBottomOf="@id/tv_duration_label"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_stamp_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_time_stamp_label"
                android:padding="4dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_remote_user_id_label"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_stamp_"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_remote_user_id_label"
                app:layout_constraintTop_toBottomOf="@id/tv_remote_user_id_label"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
